@@ -1,3 +1,15 @@
+2009-01-18  David Teller  <David.Teller@univ-orleans.fr>
+
+	* src/core/extlib/extBuffer.ml*: applied Dawid Toton's patch
+
+	* src/core/extlib/extBuffer.ml: [TYPE_CONV_PATH] adapted
+
+	* src/core/extlib/extUnix.ml: [open_connection] now uses [ **> ] instead of [ <| ]
+
+	* src/core/extlib/extPervasives.mli: <| renamed **>, |> renamed <**
+
+	* src/core/extlib/std.ml*: <| renamed **>, |> renamed <**
+
 2009-01-11  David Teller  <David.Teller@univ-orleans.fr>
 
 	* src/core/extlib/rope.ml: [sub] now defined from a function [aux]
